--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>rpc-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
