--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -22,7 +22,11 @@
             <artifactId>netty-all</artifactId>
             <version>${netty-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 </project>
