--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netty-version>4.1.50.Final</netty-version>
+        <guava.version>29.0-jre</guava.version>
     </properties>
 
     <dependencies>
