--- a/rpc-api/pom.xml
+++ b/rpc-api/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rpc-api</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>top.lzb</groupId>
+            <artifactId>rpc-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
